# ccb

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/ccb/: CrashHandler.hpp  Time.hpp
src/ccb/binary/: ByteIterator.hpp  HuffmanDecoder.hpp  InputBinaryStream.hpp  InputBitStream.hpp  OutputBinaryStream.hpp
src/ccb/charset/: CharsetConverter.hpp  CharsetPage.hpp  Convert.hpp  Cp1251Table.hpp  Cp866Table.hpp  Encoding.hpp  EncodingAlias.hpp  Koi8Table.hpp
src/ccb/config/: ConfigSerialization.hpp  JsonInputArchive.hpp  JsonOutputArchive.hpp  TreeInputArchive.hpp  TreeOutputArchive.hpp
src/ccb/crypt/: Aes.hpp  Md5.hpp  Padding.hpp  Rc4.hpp
src/ccb/csv/: CsvFile.hpp  CsvRowReader.hpp  CsvRowWriter.hpp
src/ccb/filesystem/: FileSystem.hpp  NotADirectoryException.hpp  Path.hpp  TempPathGuard.hpp
src/ccb/filesystem/unix/: FileSystem.cpp  Path.cpp
src/ccb/image/: AnyImage.hpp  AnyImageIterator.hpp  AnyImageView.hpp  Bitmap.hpp  BitmapAlgorithm.hpp  BitmapFormat.hpp  BitmapIterator.hpp  BitmapView.hpp  Image.hpp  ImageAlgorithm.hpp  ImageFormat.hpp  ImageFormatDescriptor.hpp  ImageIterator.hpp  ImageView.hpp
src/ccb/log/: FileLogTarget.hpp  ILogTarget.hpp  IsStreamable.hpp  LogLevel.hpp  LogSink.hpp  Logger.hpp
src/ccb/meta/: TypeList.hpp
src/ccb/mock/: Mock.hpp
src/ccb/stream/: ContainerStream.hpp  MemoryStream.hpp
src/ccb/tree/: JsonTreeSerializer.hpp  TreeArray.hpp  TreeMap.hpp  TreeNode.hpp  TreeNodeType.hpp  TreeValue.hpp
src/ccb_tests/binary/: HuffmanDecoderTests.cpp  InputBitStreamTests.hpp
src/ccb_tests/charset/: CharsetConverterTests.cpp  ConvertTests.cpp
src/ccb_tests/config/: JsonArchiveTests.cpp  TestConfig.hpp  TestDefaultConfig.hpp  TestProxyConfig.hpp
src/ccb_tests/crypt/: AesTests.cpp  Md5Tests.cpp  Rc4Tests.cpp
src/ccb_tests/csv/: CsvFileTests.cpp
src/ccb_tests/filesystem/: PathTests.cpp
src/ccb_tests/image/: AnyImageTests.cpp  BitmapAlgorithmTests.cpp  ImageAlgorithmTests.cpp  ImageTests.cpp
src/ccb_tests/stream/: ContainerStreamTests.cpp  MemoryStreamTests.cpp
